tests/data/placebo/test_ec2_modify_groups_action/ec2.DescribeSecurityGroups_3.json
{
  "status_code": 200,
  "data": {
    "SecurityGroups": [
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "PrefixListIds": []
          }
        ],
        "Description": "launch-wizard-1 created 2016-10-11T08:37:50.939-04:00",
        "IpPermissions": [
          {
            "PrefixListIds": [],
            "FromPort": 22,
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "ToPort": 22,
            "IpProtocol": "tcp",
            "UserIdGroupPairs": []
          }
        ],
        "GroupName": "launch-wizard-1",
        "VpcId": "vpc-d2d616b5",
        "OwnerId": "644160558196",
        "GroupId": "sg-926a56e8"
      },
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "PrefixListIds": []
          }
        ],
        "Description": "default VPC security group",
        "IpPermissions": [
          {
            "IpProtocol": "-1",
            "IpRanges": [
              {
                "CidrIp": "108.56.181.242/32"
              }
            ],
            "UserIdGroupPairs": [
              {
                "UserId": "644160558196",
                "GroupId": "sg-6c7fa917"
              }
            ],
            "PrefixListIds": []
          }
        ],
        "GroupName": "default",
        "VpcId": "vpc-d2d616b5",
        "OwnerId": "644160558196",
        "GroupId": "sg-6c7fa917"
      }
    ],
    "ResponseMetadata": {}
  }
}
