tests/data/placebo/test_ec2_modify_groups_action/ec2.ModifyNetworkInterfaceAttribute_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "HTTPStatusCode": 200, 
            "RequestId": "3302e6cf-1c09-496a-91bb-7792baed392d", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Fri, 16 Dec 2016 21:55:15 GMT"
            }
        }
    }
}
